--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
                              <div class="btn-group">
 								<button type="button" data-toggle="dropdown" class="mr-auto p-2 btn btn-outline-light dropdown-toggle py-1 px-1 mt-1 animate__animated animate__fadeInUp ">My Account</button>
 								<div class="dropdown-menu dropdown-menu-right">
-									<a href="/login" class="btn btn-primary">Login</a>
-									<a href="/logout" class="btn btn-primary">Logout</a>
+									<a href="#" class="btn btn-primary">Login</a>
+									<a href="#" class="btn btn-primary">Logout</a>
 								</div>
 							</div>
                         </div>
